RESOLVED FIXED307499
[GFC] Set infinite growth limits to base size at end of Resolve Intrinsic Track Sizes
https://bugs.webkit.org/show_bug.cgi?id=307499
Summary [GFC] Set infinite growth limits to base size at end of Resolve Intrinsic Tra...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-10 17:10:17 PST
Sammy Gill
Comment 2 2026-02-10 17:11:32 PST
EWS
Comment 3 2026-02-11 11:28:27 PST
Committed 307278@main (f4a2bdf8b85a): <https://commits.webkit.org/307278@main> Reviewed commits have been landed. Closing PR #58359 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.