[GFC] Set infinite growth limits to base size at end of Resolve Intrinsic Track Sizes https://bugs.webkit.org/show_bug.cgi?id=307499 rdar://170102156

Reviewed by Vitor Roriz and Alan Baradlay.

https://drafts.csswg.org/css-grid-1/#algo-finite-growth
If any track still has an infinite growth limit (because, for example, it had no items
placed in it or it is a flexible track), set its growth limit to its base size.

Canonical link: https://commits.webkit.org/307278@main